# trading-bot

./: .env.example  .gitignore  CHECKLIST.md  Dockerfile.freqtrade  Dockerfile.quanta_core  HANDOFF.md  HANDOFF_EXECUTION_2026-05-12.md  HANDOFF_LIVE_2026-05-12.md  HANDOFF_RISK_2026-05-12.md  HERMES_SETUP_REPORT.md  INTEGRATION_PLAN.md  LICENSE  MERGE_NOTES.md  MIGRATION_NOTES.md  MORNING-STATE.md  PRODUCTION_AUDIT_2026-05-12.md  QUANTA_CORE_README.md  README.md  SESSION_HANDOFF.md  docker-compose.yml  pyproject.toml  quanta_core.toml.example  requirements-extra.txt  start.sh
.hermes/: context.md
.hermes/cron/: nightly_reflector.job.json
.hermes/scripts/: bt_quality_gates.sh  gpu_gate.sh  gpu_resume.sh  gpu_yield_now.sh  nightly_reflector.sh  shark_override_verify.sh  stocks_ml_train.sh
.hermes/skills/: flash_crash_defense.md  market_research.md  morning_briefing.md  post_mortem.md  regime_shift_detector.md  risk_audit.md  slack_reporting.md  squeeze_survival.md  stocks_coordination.md  trade_review.md
audit/: 2026-05-14-regime-null-gap.md  2026-05-15-advanced-strategies-research.md  2026-05-15-funding-rate-design.md  2026-05-15-hermes-friday-skip-bug.md  2026-05-15-mf-automation-fix.md  2026-05-15-modelforge-schema-fix-plan.md  2026-05-15-stocks-strategy-research.md  2026-05-15-strategy-research.md  2026-05-15-wheel-sizing-research.md
audit/2026-05-14-night/: 00-EXEC-SUMMARY.md  01-backend-api.md  02-modelforge.md  03-frontend.md  04-data-integrity.md  05-cron-notify.md  06-code-quality.md  07-architecture-review.md
data/v4_runtime/: README.md
docs/: 4_WEEK_EXECUTION_PLAN.md  DASHBOARD_DESIGN_PROMPT.md  DEPLOY_LOG.md  HERMES_CRONS_2026-05-11.md  HERMES_GATEWAY_RUNBOOK.md  LLM_CALLS_UX.md  LLM_LOGGER_SCHEMA.md  MODELFORGE_DATA_PIPELINE.md  MODELFORGE_INTEGRATION_PLAN.md  MODELFORGE_TRACK_REGISTRATION.md  MORNING_BRIEFING_2026-05-11.md  NFI_X6_4H_RESAMPLE.md  NFI_X6_ACTIVATION_2026-05-11.md  NFI_X6_ACTIVATION_LOG.md  NFI_X6_BACKTEST_REPORT_2026-05-11.md  NFI_X6_HANDOFF.md  NIGHTLY_REFLECTOR_HANDOFF.md  POST-CUTOVER-AUDIT-2026-05-13.md  README_REWRITE_HANDOFF.md  RECOVERY.md  SESSION_PLAN_2026-05-11_0935ET.md  SPA_OVERNIGHT_PLAN.md  TFT_PICKLE_FIX.md  V3_MERGE_CHECKLIST.md  V3_QA_VERIFIER_PROMPT.md  V3_REDESIGN_PLAN.md  V4_CUTOVER_LOG.md  V4_SHADOW_MODE_DESIGN.md  VLLM_SERVING.md  WEEKLY_TRAINING_CARD.md  WHEEL_PILOT_PRECONDITIONS_2026-05-11.md
docs/V3_AUDIT_EVIDENCE/: README.md
docs/audit/: EXCHANGE_API_GAPS_2026-05-12.md
docs/quanta-core-v4/: 01-RESEARCH-MULTI_MODEL_RESIDENCY.md  02-RESEARCH-CONTINUOUS_LORA.md  03-RESEARCH-RISK_MONTE_CARLO.md  04-RESEARCH-EXCHANGE_CONNECTIVITY.md  05-RESEARCH-PARALLEL_AGENTS.md  06-ARCHITECTURE.md  07-VALIDATOR_REPORT.md  08-FEASIBILITY.md  09-RISKS.md  10-CODE_PATTERNS.md
docs/quanta-core-v4-rev2/: 01-RESEARCH-MULTI_MODEL_RESIDENCY.md  02-RESEARCH-CONTINUOUS_LORA.md  05-RESEARCH-PARALLEL_AGENTS.md  08-FEASIBILITY.md  11-HERMES_CRON_LEARNING.md  12-WEEKLY_PUBLISHER.md  13-MODELFORGE_INTEGRATION.md  BUILD-WAVE-1-CONFLICT.md  DESIGN-LOCK.md  INTEGRATION-SMOKE.md  MORNING-STATE.md  QUALITY-REPORT-WAVE-2.md  WAVE-2-PLAN.md
frontend-v4/: .gitignore  .npmrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend-v4/src/: App.tsx  main.tsx
frontend-v5/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend-v5/scripts/: codegen.sh
frontend-v5/src/: App.tsx  main.tsx
grafana/dashboards/: trading.json
hermes-mcp/: install.sh  requirements.txt  server.py  setup_telegram.sh
hermes_patches/: 0001-ops-silence-gateway-restart-noise-diagnostic-stack-f.patch  0002-cron-dedicated-worker-pool-dispatch-fix-tick-lock-bl.patch
ops-design/: README-from-cloud-claude.md  Trading Bot Redesign.html  index.html
ops-design/styles/: tokens.css
ops-design/views/: data.js  operator.jsx  shared.jsx  telemetry.jsx
postgres/init/: 01_databases.sh
scripts/: PROMPT.md  archive_shark_memory.py  auto_rollback.py  backtest_with_gates.py  backup.sh  bootstrap_vllm.sh  check_hermes_health.sh  emergency_stop.sh  fix_hermes_skill_layout.sh  freqtrade_entrypoint.py  go_live.sh  harden_secrets.sh  hermes_dashboard.sh  install_crontab.sh  install_hermes_script.sh  install_nfi_x6.sh  install_shark_override_verify.sh  migrate_historic_predictions_dtype.py  modelforge_curate.py  modelforge_ingest.py  modelforge_ingest_decisions.py  modelforge_register_tracks.py  monitor.sh  nfi_x6_4h_smoke.sh  nfi_x6_gate_check.sh  nfi_x6_parse_backtest.py  nightly_reflector.py  ollama_cleanup_garbage_adapters.sh  parity_oracle_tick.py  reapply_hermes_patches.sh  rebalance_capital.py  refit_regime_hmm.py  resample_1h_to_4h.py  retrain_tft_pairs.py  run_v4_shadow.py  sentiment_refresh.py  stocks_day_runner.sh  sync_universe.sh  tail_llm_calls.sh  v4_cutover.sh  (+3 more)
secrets/: README.md
stocks/: .gitignore  CLAUDE.md  LICENSE  PROVENANCE.md  README.md  env.template  requirements.txt
tests/: conftest.py  test_bt_quality_gates.py  test_dashboard.py  test_drl.py  test_ept_evolution.py  test_go_live.py  test_gpu_gate.sh  test_hackernews_fetcher.py  test_hermes_endpoints.py  test_legacy_proxy.py  test_license_present.py  test_llm_calls_endpoint.py  test_modelforge_curate.py  test_modelforge_ingest.py  test_modelforge_integration.py  test_modelforge_register.py  test_monitoring.py  test_nightly_reflector.py  test_no_legacy_color_tokens.py  test_onchain.py  test_ops_dashboard.py  test_producers_metrics.py  test_producers_portfolio.py  test_producers_positions.py  test_regime.py  test_resample_4h.py  test_retrain_tft_pairs_reset.py  test_risk_execution.py  test_risk_governor_backtest_isolation.py  test_risk_governor_dup_index.py  test_risk_single_name_cap.py  test_sentiment.py  test_stocktwits_fetcher.py  test_tft.py  test_tft_blind_log_latch.py  test_tft_pickle.py  test_unified_risk.py  test_unified_risk_config.py  test_weekly_training_endpoint.py
user_data/: config.backtest_blind.json  config.json  universe.json
(+606 files in other folders)
