[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quanta-core"
version = "0.4.0"
description = "Quanta Core V4 — Hermes Layer 8 scheduler (Wave 2)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "saijayanth" }]
dependencies = [
    "httpx>=0.27",
    "jinja2>=3.1",
    "psycopg[binary]>=3.1",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "mypy>=1.8",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["quanta_core*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["src/quanta_core/hermes"]

[[tool.mypy.overrides]]
module = ["psycopg.*", "jinja2.*", "httpx.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests/hermes"]
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/quanta_core/hermes"]
branch = true

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
