[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quanta_core"
version = "0.1.0"
description = "Quanta Core — V4 trading engine"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary,pool]>=3.2,<4",
    "httpx>=0.27,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/quanta_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["src/quanta_core"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pragma: no cover",
]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N", "A", "T201", "RUF"]
ignore = [
    "E501",  # line length — handled by formatter
    "N818",  # exception suffix
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["N802", "N803", "S101", "T201"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
exclude = ["build/", "dist/"]

[[tool.mypy.overrides]]
module = ["psycopg.*", "psycopg_pool.*"]
follow_imports = "skip"
